Ignore the captured image, no need to push into git.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ usedAudio/
 capturedVideo/
 CV_model/ 
 2_IPEClassifier/DisplayModelCapabilities.log
+D:\SCMA\3-APD\fromAraya\Computer-Vision-CV\3.1_FaceRecog\cropped_faces
+D:\SCMA\3-APD\fromAraya\Computer-Vision-CV\3.1_FaceRecog\run_py\cropped_faces
