--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ usedAudio/
 capturedVideo/
 CV_model/ 
 2_IPEClassifier/DisplayModelCapabilities.log
-r"D:\SCMA\3-APD\fromAraya\Computer-Vision-CV\3.1_FaceRecog\cropped_faces"
-r"D:\SCMA\3-APD\fromAraya\Computer-Vision-CV\3.1_FaceRecog\run_py\cropped_faces"
+3.1_FaceRecog/run_py/cropped_faces
+3.1_FaceRecog/cropped_faces
