--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.3.1
+asttokens==3.0.0
 astunparse==1.6.3
 beautifulsoup4==4.14.2
 blinker==1.9.0
@@ -7,11 +8,18 @@ charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
 coloredlogs==15.0.1
+comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
+debugpy==1.8.17
+decorator==5.2.1
 deepface==0.0.95
-defusedxml==0.7.1
+dlib==20.0.0
+executing==2.2.1
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 ffmpeg==1.4
+ffmpeg-python==0.2.0
 filelock==3.19.1
 fire==0.7.1
 flask==3.1.2
@@ -19,6 +27,7 @@ flask-cors==6.0.1
 flatbuffers==25.2.10
 fonttools==4.59.2
 fsspec==2025.9.0
+future==1.0.0
 gast==0.6.0
 gdown==5.2.0
 google-pasta==0.2.0
@@ -27,9 +36,15 @@ gunicorn==23.0.0
 h5py==3.14.0
 humanfriendly==10.0
 idna==3.10
+ipykernel==6.30.1
+ipython==9.6.0
+ipython-pygments-lexers==1.1.1
 itsdangerous==2.2.0
+jedi==0.19.2
 jinja2==3.1.6
 joblib==1.5.2
+jupyter-client==8.6.3
+jupyter-core==5.8.1
 keras==3.11.3
 kiwisolver==1.4.9
 lap==0.5.12
@@ -39,14 +54,16 @@ markdown==3.9
 markdown-it-py==4.0.0
 markupsafe==3.0.2
 matplotlib==3.10.6
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.5.3
 mpmath==1.3.0
 mtcnn==1.0.0
 namex==0.1.0
+nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.2.6
-onnx==1.19.1rc1
+onnx==1.17.0
 onnxruntime==1.22.1
 opencv-contrib-python==4.12.0.88
 opencv-python==4.12.0.88
@@ -54,11 +71,14 @@ opt-einsum==3.4.0
 optree==0.17.0
 packaging==25.0
 pandas==2.3.3
+parso==0.8.5
 pillow==11.3.0
-pip==25.2
+platformdirs==4.5.0
 polars==1.33.1
+prompt-toolkit==3.0.52
 protobuf==6.32.1
 psutil==7.0.0
+pure-eval==0.2.3
 pygame==2.6.1
 pygments==2.19.2
 pyparsing==3.2.4
@@ -66,32 +86,39 @@ pyreadline3==3.5.4
 pysocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32==311
 pyyaml==6.0.2
+pyzmq==27.1.0
 requests==2.32.5
 retina-face==0.0.17
 rich==14.1.0
 rtsp==1.1.12
 scikit-learn==1.7.2
 scipy==1.16.2
+seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
 soupsieve==2.8
-supervision==0.26.1
+stack-data==0.6.3
 sympy==1.14.0
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
 termcolor==3.1.0
 tf-keras==2.20.1
+tf2onnx==1.16.1
 threadpoolctl==3.6.0
 torch==2.8.0
 torchvision==0.23.0
+tornado==6.5.2
 tqdm==4.67.1
+traitlets==5.14.3
 typing-extensions==4.15.0
 tzdata==2025.2
 ultralytics==8.3.200
 ultralytics-thop==2.0.17
 urllib3==2.5.0
+wcwidth==0.2.14
 werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.3
