--- a/requirements.txt
+++ b/requirements.txt
@@ -118,6 +118,7 @@ tzdata==2025.2
 ultralytics==8.3.200
 ultralytics-thop==2.0.17
 urllib3==2.5.0
+voyager==2.1.0
 wcwidth==0.2.14
 werkzeug==3.1.3
 wheel==0.45.1
